# sst

./: .gitignore  README.md  bun.lockb  go.mod  go.sum
.github/workflows/: check.yml  release.yml
cmd/sst/: state.go
cmd/sst/mosaic/aws/: function.go
cmd/sst/mosaic/ui/: ui.go
cmd/sst/mosaic/watcher/: watcher_test.go
examples/aws-auth-nextjs/: package.json
examples/aws-email-domain/: package.json  sender.ts  sst.config.ts
examples/aws-nextjs/: package.json
examples/aws-nextjs-add-behavior/: package.json
examples/aws-nextjs-basic-auth/: package.json
examples/aws-nextjs-container/: package.json
examples/aws-nextjs-redis/: package.json
examples/aws-nextjs-sharp/: package.json
examples/aws-nextjs-stream/: package.json
examples/aws-python/: sst.config.ts
examples/aws-python-container/custom_dockerfile/: Dockerfile
examples/aws-python-huggingface/: sst.config.ts
examples/aws-python-huggingface/functions/: Dockerfile
examples/aws-rails/: Gemfile
examples/aws-realtime-nextjs/: package.json
examples/cloudflare-d1-static/: package.json  sst.config.ts
examples/cloudflare-durable-object/: package.json  sst.config.ts  worker.ts
examples/internal/playground/: package.json
examples/python-layouts/flat-layout/: handler.py  pyproject.toml  sst.config.ts
examples/python-layouts/monorepo-layout/: pyproject.toml  sst.config.ts
examples/python-layouts/monorepo-layout/services/api/: handler.py  pyproject.toml
examples/python-layouts/monorepo-layout/services/worker/: handler.py  pyproject.toml
examples/python-layouts/monorepo-layout/shared/: pyproject.toml
examples/python-layouts/monorepo-layout/shared/shared/: __init__.py  utils.py
examples/python-layouts/nested-layout/: pyproject.toml  sst.config.ts
examples/python-layouts/nested-layout/app/data/: config.json
examples/python-layouts/nested-layout/app/functions/api/: handler.py
examples/python-layouts/nested-layout/app/functions/auth/: handler.py
examples/python-layouts/nested-layout/app/functions/worker/: handler.py
examples/python-layouts/nested-layout/shared/: utils.py
examples/python-layouts/workspace-layout/: pyproject.toml  sst.config.ts
examples/python-layouts/workspace-layout/src/mypackage/: __init__.py  handler.py
examples/python-modern-uv/: handler.py  pyproject.toml  sst.config.ts
examples/python-modern-uv/src/myapp/: __init__.py  utils.py
pkg/project/: completed.go  project.go  run.go
pkg/project/provider/: aws.go  cloudflare.go  compress.go  compress_test.go  local.go  provider.go
pkg/runtime/: runtime.go  runtime_test.go
pkg/runtime/golang/: golang.go
pkg/runtime/node/: node.go
pkg/runtime/python/: build.go  build_test.go  project.go  project_test.go  python.go  python_test.go
pkg/runtime/rust/: rust.go
pkg/runtime/worker/: worker.go
pkg/types/typescript/: typescript.go  typescript_test.go
platform/: package.json
platform/functions/docker/: python.Dockerfile
platform/functions/python-runtime/: index.py
platform/src/: config.ts
platform/src/components/: component.ts
platform/src/components/aws/: bus-base-subscriber.ts  bus.ts  (+3 more)
sdk/js/: package.json
sdk/python/: pyproject.toml
www/: astro.config.mjs
(+30 files in other folders)
