[project]
name = "flat-example"
version = "0.1.0"
description = "SST Python flat layout example"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "handler.py",
    "utils.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "handler.py",
    "utils.py",
    "pyproject.toml",
]
exclude = [
    ".sst/",
    "node_modules/",
    "dist/",
    ".venv/",
    "__pycache__/",
]
