[project]
name = "monorepo-example"
version = "0.1.0"
description = "SST Python monorepo layout example"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "shared"]

[tool.hatch.build.targets.sdist]
packages = ["services", "shared"]

[tool.uv.workspace]
members = ["services/*", "shared"]
