[project]
name = "nested-example"
version = "0.1.0"
description = "SST Python nested layout example"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "shared"]

[tool.hatch.build.targets.sdist]
packages = ["app", "shared"]
include = ["pyproject.toml"]
