[project]
name = "workspace-example"
version = "0.1.0"
description = "SST Python workspace layout example"
requires-python = ">=3.11"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[tool.hatch.build.targets.sdist]
packages = ["src/mypackage"]
include = ["pyproject.toml"]
