[project]
name = "api-service"
version = "0.1.0"
description = "API service"
requires-python = ">=3.12"
dependencies = ["shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { workspace = true }
